# claude-code-switcher

./: .gitignore  Cargo.toml  LICENSE  README.md  UI-REFERENCE.md
.github/workflows/: ci.yml  release.yml
src/: claude_cli.rs  cli.rs  commands.rs  confirm_selector.rs  credentials.rs  lib.rs  main.rs  prefs.rs  settings.rs  simple_selector.rs  snapshots.rs  utils.rs
src/selectors/: base.rs  confirmation.rs  credential.rs  error.rs  mod.rs  navigation.rs  snapshot.rs  template.rs
src/templates/: anyrouter.rs  beeapi.rs  day77.rs  deepseek.rs  duojie.rs  fishtrip.rs  k2.rs  kat_coder.rs  kimi.rs  longcat.rs  minimax.rs  mod.rs  openrouter.rs  seed_code.rs  zai.rs  zenmux.rs
src/tui/: app.rs  input.rs  mod.rs  view.rs
