[package]
name = "claude-code-switcher"
version = "0.6.0"
edition = "2024"
authors = ["cupnfish <cupnfish@icloud.com>"]
repository = "https://github.com/Cupnfish/claude-code-switcher"
description = "A CLI tool for managing Claude Code setting snapshots and templates"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
inquire = "0.9"
atty = "0.2"
console = "0.16"
crossterm = "0.29.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"


[[bin]]
name = "ccs"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
